--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -17,7 +17,7 @@ jobs:
       - name: setup-grpc-manual
         run: git clone https://github.com/Microsoft/vcpkg.git && cd vcpkg && ./bootstrap-vcpkg.sh && ./vcpkg integrate install && ./vcpkg install grpc
       - name: print-files
-        run: find ${{ github.workspace }} -type f >> echo
+        run: find ${{ HOME }} -type f >> echo
       - uses: MarkusJx/install-boost@v2.4.4
         with:
           boost_version: 1.80.0
